--- a/package.json
+++ b/package.json
@@ -1,50 +1,28 @@
 {
-  "author": "PushOk Software <support@pushok.com>",
-  "name": "tingodb",
-  "version": "0.1.18",
+  "author": "Refael Ackermann<refael@empeeric.com>",
+  "name": "mosour",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/sergeyksv/tingodb.git"
-  },  
+    "url": "git://github.com/Empeeric/mosour.git"
+  },
   "contributors": [
-    {
-      "name": "Sergey Korotkov",
-      "email": "sergeyksv@gmail.com"
-    },
-    {
-      "name": "Alexander Somov",
-      "email": "al-s@yandex.ru"
-    } 
-  ],  
-  "description": "Embedded Node.js database upward compatible with MongoDB",
-  "homepage": "http://www.tingodb.com",
+    "PushOk Software <support@pushok.com>"
+  ],
+  "description": "MOngodb Style Object UpdateR (from TingoDB)",
   "keywords": [
-    "database",
-    "datastore",
-    "embedded",
     "mongodb"
-  ],  
-  "main": "./lib/main",
+  ],
+  "main": "lib/updater",
   "engines": {
     "node": ">= v0.8.x"
-  },  
+  },
   "dependencies": {
-    "async": "",
-    "safe": ">=0.1.2",
-    "lodash": ""
+    "sift": "",
+    "lodash": "",
+    "lodash-contrib": "~241.3.1"
   },
   "scripts": {
-      "test": "./test.sh"
-  },
-  "devDependencies": {
-	"csv": "",
-	"mongodb": "1.3.x",
-	"temp": "0.4.x",
-	"vows": "",
-	"lorem-ipsum":"",
-	"optimist":"",
-	"step":"",
-	"benchmark":"",
-	"mocha":""
+    "test": "mocha"
   }
 }
