--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "mongodb"
   ],
-  "main": "lib/updater",
+  "main": "lib/updater.js",
   "engines": {
     "node": ">= v0.8.x"
   },
@@ -23,6 +23,8 @@
     "lodash-contrib": "~241.3.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha",
+    "postpublish": "git push origin master --tags"
   }
 }
