--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "author": "Refael Ackermann<refael@empeeric.com>",
-  "name": "grist",
+  "name": "grist-gnash",
   "description": "mongodb style object mutator (derived from TingoDB)",
   "version": "1.0.2",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/Empeeric/grist.git"
-  },
+  "repository": "Empeeric/grist-gnash.git",
   "contributors": [
     "PushOk Software <support@pushok.com>"
   ],
